fixed the all alignment issue in all the module
fixed the all alignment issue in all the module

--- a/rems/src/app/components/Booking/view-booking/view-booking.component.css
+++ b/rems/src/app/components/Booking/view-booking/view-booking.component.css
@@ -62,3 +62,9 @@
   color: #555;
   margin-top: 40px;
 }
+.btn-row {
+  display: flex;
+  justify-content: flex-end; /* RIGHT side */
+  margin-top: 20px;
+}
+
